<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAmount" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/etAmount" />

    <TextView
        android:id="@+id/tnNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNumPax" />

    <EditText
        android:id="@+id/etPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/etPax" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbSVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="NO SVS"
            android:textOn="SVS" />

        <ToggleButton
            android:id="@+id/tbGST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="NO GST"
            android:textOn="GST" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDis" />

    <EditText
        android:id="@+id/etDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/etDiscount" />

    <RadioGroup
        android:id="@+id/rgPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbCash" />

        <RadioButton
            android:id="@+id/rbPayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbPayNow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSplit" />

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnRestart" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvBill"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/tvEach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvEach"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>